tests/check_output/snapshots/errors__check_output__main@coffee_provides_on_empty_impl.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: #[*_provides] is supposed to be placed on an impl block containing one single function - found 0 functions instead
  --> examples/provides_on_empty_impl.rs:87:5
   |
87 |     impl CoffeeLogger {}
   |     ^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `logger::SingletonFactoryCoffeeLogger`
  --> examples/provides_on_empty_impl.rs:17:5
   |
17 | use logger::CoffeeLogger;
   |     ^^^^^^^^^^^^^^^^^^^^ no `SingletonFactoryCoffeeLogger` in `logger`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `coffee` (example "provides_on_empty_impl") due to 2 previous errors
