tests/check_output/snapshots/errors__check_output__main@component_missing_binding.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: Binding is not defined
  --> examples/component_missing_binding.rs:40:8
   |
40 |     fn brewer(&self) -> CoffeeMaker<H, P>;
   |        ^^^^^^

error[E0277]: the trait bound `DirkCoffeeShop: DirkComponent<_>` is not satisfied
  --> examples/component_missing_binding.rs:20:24
   |
20 |     let coffee_shop = <DirkCoffeeShop as dirk::DirkComponent<_>>::builder().build();
   |                        ^^^^^^^^^^^^^^ the trait `DirkComponent<_>` is not implemented for `DirkCoffeeShop`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `coffee` (example "component_missing_binding") due to 2 previous errors
